@@ -3,7 +3,9 @@ Retrotranslator Changelog
 
   - Supported: all constructors of java.io.PrintWriter.
   - Supported: java.rmi.server.RemoteObjectInvocationHandler. 
+  - Supported: IllegalArgumentException(String, Throwable), IllegalArgumentException(Throwable).
   - Supported: java.util.concurrent.locks.Condition.awaitNanos(long) but with very little accuracy guarantees.
+  - Supported in BigDecimal: divideAndRemainder(BigDecimal), divideToIntegralValue(BigDecimal), remainder(BigDecimal).
   - Bug fixed: translation did not work for ReentrantReadWriteLock.readLock() and ReentrantReadWriteLock.writeLock().
   - New -retainapi option to make classes compatible with JVM 1.4 but keep Java 5 API uses. 
 
